--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,6 @@
   width: 18px;
   height: 12px;
   background-image: url("../images/menu-icon.png");
-
 }
 
 .main {
@@ -49,7 +48,7 @@
   display: flex;
   flex-direction: column;
 }
-  
+
 .primary-text {
   margin-top: 114px;
   margin-left: 24px;
@@ -60,7 +59,7 @@
   color: #172b4d;
   font-family: Poppins;
   font-weight: 700;
-  border:0px;
+  border: 0;
   line-height: 52px;
 }
 
@@ -75,7 +74,7 @@
   font-family: Poppins, Times, serif;
   font-style: normal;
   font-weight: 400;
-  border:0px;
+  border: 0;
   line-height: 24px;
 }
 
@@ -85,11 +84,11 @@
   height: 24px;
   width: 120px;
   font-size: 16px;
-  color: #7F8CFF;
+  color: #7f8cff;
   font-family: Poppins, Times, serif;
   font-style: normal;
   font-weight: 500;
-  border:0px;
+  border: 0;
   line-height: 24px;
 }
 
@@ -107,29 +106,29 @@
 .twitter-icon {
   background-image: url("../images/twitter-icon.png");
   width: 19.99px;
-  height: 19.96px;   
+  height: 19.96px;  
 }
 
 .linkedin-icon {
   background-image: url("../images/linkedin-icon.png");
   width: 20px;
-  height: 20px; 
+  height: 20px;
 }
 
 .m-icon {
   background-image: url("../images/m-icon.png");
   width: 20px;
-  height: 20px; 
+  height: 20px;
 }
 
 .cat-icon {
   background-image: url("../images/cat-icon.png");
   width: 20px;
-  height: 20px; 
+  height: 20px;
 }
 
 .fingers-icon {
   background-image: url("../images/fingers-icon.png");
   width: 20px;
-  height: 20px; 
+  height: 20px;
 }
