--- a/css/styles.css
+++ b/css/styles.css
@@ -349,7 +349,7 @@ ul {
 }
 
 .project-access:disabled {
-  border: 1px solid #C1c7d0;
+  border: 1px solid #c1c7d0;
   color: #5e6c84;
 }
 
@@ -384,7 +384,7 @@ ul {
 
 .resume-access:hover {
   background: #6070ff;
-  box-shadow: 0px 8px 16px rgba(64, 83, 252, 0.24);
+  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
   color: #fff;
 }
 
@@ -394,7 +394,7 @@ ul {
 }
 
 .resume-access:disabled {
-  border: 1px solid #C1c7d0;
+  border: 1px solid #c1c7d0;
   color: #5e6c84;
 }
 
