--- a/css/styles.css
+++ b/css/styles.css
@@ -529,3 +529,81 @@ ul {
   text-align: center;
   color: #EBEBFF;
 }
+
+.form-elements-list {
+  margin-top: 80px;
+  margin-left: 24px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.input-name {
+  box-sizing: border-box;
+  padding: 15px;
+  width: 327px;
+  height: 48px;
+  background: #FFFFFF;
+  border: 1px solid #CFD8DC;
+  border-radius: 8px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 20px;
+}
+
+.input-email {
+  box-sizing: border-box;
+  padding: 15px;
+  width: 327px;
+  height: 48px;
+  background: #FFFFFF;
+  border: 1px solid #CFD8DC;
+  border-radius: 8px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 20px;
+}
+
+.input-textarea {
+  box-sizing: border-box;
+  width: 327px;
+  height: 170px;
+  padding: 15px;
+  background: #FFFFFF;
+  border: 1px solid #CFD8DC;
+  border-radius: 8px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 20px;
+}
+
+.submit-button {
+  margin-bottom: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-items: center;
+  padding: 12px 12px;
+  width: 145px;
+  height: 48px;
+  background: #FFFFFF;
+  border-radius: 8px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #6070FF;
+  border: none;
+}
