--- a/css/styles.css
+++ b/css/styles.css
@@ -607,3 +607,14 @@ ul {
   color: #6070FF;
   border: none;
 }
+
+.submit-button:hover {
+  background: #6070ff;
+  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
+  color: #fff;
+}
+
+.submit-button:active {
+  background: #2230d2;
+  color: #5e6c84;
+}
