--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,7 @@
 }
 
 .intro {
-  min-width: 200px;
-  max-width: 100%;
+  min-width: 375px;
   display: flex;
   flex-direction: column;
 }
@@ -498,27 +497,26 @@ ul {
   flex-direction: column;
   background-image: url("../images/contact-me-shapes-background.png"), url("../images/contact-me-blue-background.png");
   background-size: cover;
+  text-align: center;
 }
 
 .contactme-title {
-  margin-left: 12px;
   margin-top: 103px;
+  padding-left: 70px;
   width: 801px;
   height: 56px;
   font-family: Poppins, Times, serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 40px;
+  font-size: 25px;
   line-height: 52px;
   display: flex;
-  align-items: center;
-  text-align: center;
-  color: #FFFFFF;
+  color: #fff;
 }
 
 .contactme-intro {
-  margin-left: 24px;
   margin-top: 12px;
+  padding-left: 20px;
   width: 327px;
   height: 102px;
   font-family: Poppins, Times, serif;
@@ -527,16 +525,16 @@ ul {
   font-size: 20px;
   line-height: 28px;
   text-align: center;
-  color: #EBEBFF;
+  color: #ebebff;
 }
 
 .form-elements-list {
   margin-top: 80px;
-  margin-left: 24px;
   width: 100%;
   display: flex;
   flex-direction: column;
   text-align: left;
+  padding-left: 24px;
 }
 
 .input-name {
@@ -544,10 +542,10 @@ ul {
   padding: 15px;
   width: 327px;
   height: 48px;
-  background: #FFFFFF;
-  border: 1px solid #CFD8DC;
+  background: #fff;
+  border: 1px solid #cfd8dc;
   border-radius: 8px;
-  font-family: 'Poppins';
+  font-family: Poppins, Times, serif;
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -559,10 +557,10 @@ ul {
   padding: 15px;
   width: 327px;
   height: 48px;
-  background: #FFFFFF;
+  background: #fff;
   border: 1px solid #CFD8DC;
   border-radius: 8px;
-  font-family: 'Poppins';
+  font-family: Poppins, Times, serif;
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -574,10 +572,10 @@ ul {
   width: 327px;
   height: 170px;
   padding: 15px;
-  background: #FFFFFF;
-  border: 1px solid #CFD8DC;
+  background: #fff;
+  border: 1px solid #cfd8dc;
   border-radius: 8px;
-  font-family: 'Poppins';
+  font-family: Poppins, Times, serif;
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -593,9 +591,9 @@ ul {
   padding: 12px 12px;
   width: 145px;
   height: 48px;
-  background: #FFFFFF;
+  background: #fff;
   border-radius: 8px;
-  font-family: 'Poppins';
+  font-family: Poppins, Times, serif;
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
@@ -604,7 +602,7 @@ ul {
   align-items: center;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #6070FF;
+  color: #6070ff;
   border: none;
 }
 
