--- a/css/styles.css
+++ b/css/styles.css
@@ -558,7 +558,7 @@ ul {
   width: 327px;
   height: 48px;
   background: #fff;
-  border: 1px solid #CFD8DC;
+  border: 1px solid #cfd8dc;
   border-radius: 8px;
   font-family: Poppins, Times, serif;
   font-style: normal;
@@ -587,7 +587,6 @@ ul {
   display: flex;
   flex-direction: row;
   align-items: center;
-  align-items: center;
   padding: 12px 12px;
   width: 145px;
   height: 48px;
@@ -598,8 +597,6 @@ ul {
   font-weight: 500;
   font-size: 17px;
   line-height: 24px;
-  display: flex;
-  align-items: center;
   text-align: center;
   letter-spacing: 0.03em;
   color: #6070ff;
