--- a/css/styles.css
+++ b/css/styles.css
@@ -515,3 +515,17 @@ ul {
   text-align: center;
   color: #FFFFFF;
 }
+
+.contactme-intro {
+  margin-left: 24px;
+  margin-top: 12px;
+  width: 327px;
+  height: 102px;
+  font-family: Poppins, Times, serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+  color: #EBEBFF;
+}
