--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,9 @@
 }
 
 .navbar {
-  width: 100%;
   height: 100%;
+  padding-left: 30px;
+  padding-right: 30px;
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
@@ -33,7 +34,6 @@
 }
 
 .my-logo {
-  margin-left: 24px;
   margin-top: 10px;
   margin-bottom: 10px;
   height: 50%;
@@ -45,8 +45,12 @@
   line-height: 20px;
 }
 
+.navlist {
+  display: flex;
+  justify-content: space-between;
+}
+
 .menu-icon {
-  margin-right: 28px;
   margin-top: 14px;
   margin-bottom: 14px;
   width: 18px;
@@ -594,4 +598,24 @@ ul {
 .submit-button:active {
   background: #2230d2;
   color: #5e6c84;
+}
+
+
+@media (min-width: 1000px) {
+  .menu-icon {
+    display: none;
+  }
+  .navbar {
+    padding-left: 155px;
+    padding-right: 155px;
+  }
+  .navlink {
+    justify-self: right;
+  }
+}
+
+@media (max-width: 1000px) {
+  .navlink {
+    display: none;
+  }
 }
