modify sections for desktop responsiveness

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@
   height: 50%;
   width: 76px;
   font-size: 18px;
-  color: #6070ff;f
+  color: #6070ff;
   font-weight: 700;
   text-align: center;
   line-height: 20px;
